# meowings

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh  use_case.drawio
figs/: structure.drawio
img/: layer.drawio  module.drawio  use_case.drawio
include/: log_redirected.hh  public.hh
include/client/: chatclient.hh  dummyUI.hh  string_hash_compile_time.hh
include/db/: mysql_raii.hh
include/model/: friendmodel.hh  group.hh  groupmodel.hh  user.hh
include/server/: chatserver.hh  chatservice.hh  redis_interface.hh
include/server/model/: friendmodel.hh  group.hh  groupmodel.hh  offlinemessagemodel.hh  user.hh  usermodel.hh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  chatclient.cc  dummyUI.cc  log_redirected.cc  main.cc
src/loadtest/: CMakeLists.txt  loadtest.cc
src/server/: CMakeLists.txt  chatserver.cc  chatservice.cc  main.cc  redis_interface.cc  usermodel.cc
src/server/model/: friendmodel.cc  groupmodel.cc  offlinemessagemodel.cc  usermodel.cc
test/: CMakeLists.txt  test_msg.json
test/test_cc/: Makefile  str_switch_case.cc
test/test_json/: CMakeLists.txt  Makefile  test_json.cc
test/test_muduo/: CMakeLists.txt  Makefile
